--- a/docs/api/qiskit/release-notes/1.1.mdx
+++ b/docs/api/qiskit/release-notes/1.1.mdx
@@ -98,7 +98,7 @@ The Qiskit 1.1.0 release is a minor feature release that includes a myriad of ne
 >
 > *   The default two qubit synthesis methods that are used internally by the transpiler in the [`UnitarySynthesis`](/docs/api/qiskit/1.1/qiskit.transpiler.passes.UnitarySynthesis "qiskit.transpiler.passes.UnitarySynthesis") pass have been re-implemented in Rust. This yields significant runtime speedups when decomposing two qubit unitary matrices. As a consequence, the runtime of transpilation with optimization level 3 was significantly improved where running [`UnitarySynthesis`](/docs/api/qiskit/1.1/qiskit.transpiler.passes.UnitarySynthesis "qiskit.transpiler.passes.UnitarySynthesis") incurred a large runtime overhead historically. This release also starts running [`UnitarySynthesis`](/docs/api/qiskit/1.1/qiskit.transpiler.passes.UnitarySynthesis "qiskit.transpiler.passes.UnitarySynthesis") as part of the optimization stage in optimization level 2 because of these runtime performance improvements.
 >
->     Additionally, the numeric methods used in [`Isometry`](/docs/api/qiskit/1.1/qiskit.circuit.library.Isometry "qiskit.circuit.library.Isometry") have been moved to Rust, enabling large runtime speed-ups in particular for controlled unitary gate synthesis. The decomposition for multi-controlled :class:.XGate\` and [`PhaseGate`](/docs/api/qiskit/1.1/qiskit.circuit.library.PhaseGate "qiskit.circuit.library.PhaseGate") has been improved resulting in a reduction in the number of gates used in the synthesis by more than two orders of magnitude.
+>     Additionally, the numeric methods used in [`Isometry`](/docs/api/qiskit/1.1/qiskit.circuit.library.Isometry "qiskit.circuit.library.Isometry") have been moved to Rust, enabling large runtime speed-ups in particular for controlled unitary gate synthesis. The decomposition for multi-controlled [`XGate`](/docs/api/qiskit/1.1/qiskit.circuit.library.XGate "qiskit.circuit.library.XGate") and [`PhaseGate`](/docs/api/qiskit/1.1/qiskit.circuit.library.PhaseGate "qiskit.circuit.library.PhaseGate") has been improved resulting in a reduction in the number of gates used in the synthesis by more than two orders of magnitude.
 >
 > *   A number of new transpiler passes have been introduced to Qiskit that yield significant runtime speedups while also decreasing the size of the transpiled quantum circuits in many cases. Specifically, [`ElidePermutations`](/docs/api/qiskit/1.1/qiskit.transpiler.passes.ElidePermutations "qiskit.transpiler.passes.ElidePermutations") and [`StarPreRouting`](/docs/api/qiskit/1.1/qiskit.transpiler.passes.StarPreRouting "qiskit.transpiler.passes.StarPreRouting") have been demonstrated to have a significant impact on the routing output quality and runtime and [`RemoveFinalReset`](/docs/api/qiskit/1.1/qiskit.transpiler.passes.RemoveFinalReset "qiskit.transpiler.passes.RemoveFinalReset") can improve quantum circuits that include resets.
 >
