Clarified |a> in bqi no cloning

--- a/learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information.ipynb
@@ -185,7 +185,7 @@
     "\n",
     "![Classical copy](/learning/images/courses/basics-of-quantum-information/quantum-circuits/cNOT-copy.svg)\n",
     "\n",
-    "While there is no difficulty in creating a clone of a standard basis state, this does not contradict the no-cloning theorem.\n",
+    "Here $|a\\rangle$ is $|0\\rangle$ or $|1\\rangle,$ which are states that can be realized classically. While there is no difficulty in creating a clone of a standard basis state, this does not contradict the no-cloning theorem.\n",
     "This approach of using a controlled-NOT gate would not succeed in creating a clone of the state $\\vert + \\rangle,$ for instance.\n",
     "\n",
     "One final remark about the no-cloning theorem is that it really isn't unique to quantum information — it's also impossible to clone an arbitrary probabilistic state using a classical (deterministic or probabilistic) process.\n",
