--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -23,11 +23,11 @@ Qiskit Serverless helps manage classical and quantum resources across the entire
 
 ## What is included?
 
-The following compute resources are included by default in the Qiskit Serverless environment. Users can contact [Support](/docs/support) to increase any of these.
+The following compute resources are included by default in the Qiskit Serverless environment. Users can contact [support](/docs/support) to increase any of these.
 
 - 16 vCPU cores
 - 64GB RAM
-- Maximum two active jobs per user at any one time
+- Maximum of two active jobs per user at any one time
 
 ## Install Qiskit Serverless
 
