clear outputs and fix LaTeX example filename

--- a/docs/guides/visualize-circuits.ipynb
+++ b/docs/guides/visualize-circuits.ipynb
@@ -211,17 +211,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51fc6f51-6345-435d-abed-857f29a3f451",
    "metadata": {},
    "source": [
     "### Saving output\n",
     "\n",
-    "Drawing a large-scale circuit inline in a Jupyter Notebook can be slow or unreadable.  \n",
+    "Drawing a large-scale circuit inline in a Jupyter Notebook can be slow or unreadable.\n",
     "You can save the diagram directly to a file, then open it in an image viewer and zoom in as needed."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17889caf-d953-4661-9188-00505c17064e",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "a36d1aa9-fa0d-4e27-ac83-5deee43a20dd",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +264,7 @@
    ],
    "source": [
     "# Or save a LaTeX rendering\n",
-    "circuit.draw(output=\"latex\", filename=\"circuit-latex.jpeg\")"
+    "circuit.draw(output=\"latex\", filename=\"circuit-latex.pdf\")"
    ]
   },
   {
@@ -560,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3"
   },
   "title": "Visualize circuits"
  },
