--- a/docs/guides/colibritd-pde.ipynb
+++ b/docs/guides/colibritd-pde.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "id": "b9852687",
    "metadata": {
-   "tags": [
+    "tags": [
      "version-info"
     ]
    },
@@ -255,7 +255,9 @@
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"INSTANCE_CRN\",\n",
+    "    token=\"YOUR_API_KEY\" # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
     ")\n",
     "\n",
     "quick = catalog.load(\"colibritd/quick-pde\")"
