--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -89,7 +89,7 @@
     "    ```python\n",
     "    from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "    QiskitFunctionsCatalog.save_account(token=\"<your-token>\")\n",
+    "    QiskitFunctionsCatalog.save_account(token=\"<your-API_KEY>\") # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
     "    ```\n",
     "\n",
     "    Type `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitFunctionsCatalog()`."
@@ -106,7 +106,7 @@
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
+    "    channel=\"ibm_quantum_platform\", instance=\"INSTANCE_CRN\", token=\"YOUR_API_KEY\"\n",
     ")"
    ]
   },
@@ -123,8 +123,8 @@
     "    ```python\n",
     "    from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "    # After using the following code, delete your API key on the IBM Cloud API keys page\n",
-    "    catalog = QiskitFunctionsCatalog(token=\"<MY_API_KEY>\")\n",
+    "    # After using the following code, delete your API key on the IBM Quantum Platform home dashboard\n",
+    "    catalog = QiskitFunctionsCatalog(token=\"<YOUR_API_KEY>\") # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
     "    ```\n",
     "    </details>"
    ]
