--- a/docs/guides/save-credentials.mdx
+++ b/docs/guides/save-credentials.mdx
@@ -36,7 +36,7 @@ If you have multiple instances and want to easily tell Qiskit Runtime which inst
     from qiskit_ibm_runtime import QiskitRuntimeService
 
     QiskitRuntimeService.save_account(
-      token="<api-key>",
+      token="<your-api-key>", # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard
       name="<account-name>", # Optional
       instance="<IBM Cloud CRN or instance name>", # Optional
       set_as_default=True, # Optional
@@ -52,9 +52,9 @@ If you don't provide an instance CRN and pass these credentials to Qiskit Runtim
     from qiskit_ibm_runtime import QiskitRuntimeService
 
     QiskitRuntimeService.save_account(
-      token="<api-key>",
+      token="<your=api-key>", # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard
       name="<account-name>", # Optional
-      plans_preference="['open', 'premium']", # Optional
+      plans_preference="<plan_types", # Optional
       region="<region>", # Optional
       tags="<instance-tags>", # Optional
       set_as_default=True, # Optional
@@ -66,7 +66,7 @@ If you don't provide an instance CRN and pass these credentials to Qiskit Runtim
 
 - **`token`**: IBM Cloud API key. Your token is confidential. Do not share your token in public code.
 - **`instance`**: Optionally specify the instance to use through its IBM Cloud CRN or instance name.
-- **`plans_preference`**: Optionally set the types of plans to prioritize. This is ignored if the instance is specified. Available options are `open` and `premium`. Instances of a certain plan type are excluded if the plan name is not specified. For example, if [`open`] is passed in, only Open Plan instances are available. This is ignored if `instance` is specified.
+- **`plans_preference`**: Optionally set the types of plans to prioritize. This is ignored if the instance is specified. Available options are `open`, `pay-as-you-go`, `flex`, `premium`, and `on-prem`. Instances of a certain plan type are excluded if the plan name is not specified. For example, if [`open`] is passed in, only Open Plan instances are available. This is ignored if `instance` is specified.
 - **`region`**: Optionally set the region to use. Accepted values are `us-east` and `eu-de`. This is ignored if `instance` is specified.
 - **`tags`**: Optionally specify the instance's tags. Accepts a list of tag name strings. This is ignored if `instance` is specified.
 - **`name`**: Optionally name this set of account credentials.
@@ -93,7 +93,7 @@ This example saves credentials for automatic instance selection.  Qiskit Runtime
 
 ```python
 QiskitRuntimeService.save_account(
-    token="token",
+    token="your-api-key",
     set_as_default=True,
     overwrite = True,
 
