--- a/docs/security/virtual-private-endpoints.mdx
+++ b/docs/security/virtual-private-endpoints.mdx
@@ -57,7 +57,10 @@ VPE support requires `qiskit-ibm-runtime` v0.24.0 or later.
 When instantiating `QiskitRuntimeService`, specify `private_endpoint=True`.
 
 ```python
-service = QiskitRuntimeService(token="APIKEY", instance="SERVICE_CRN", channel="ibm_cloud", private_endpoint=True)
+service = QiskitRuntimeService(token="your-API_KEY", # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard
+                              instance="INSTANCE_CRN",
+                              channel="ibm_cloud",
+                              private_endpoint=True)
 ```
 
 ### Use the VPE with the IBM Quantum API
