--- a/docs/tutorials/compilation-methods-for-hamiltonian-simulation-circuits.ipynb
+++ b/docs/tutorials/compilation-methods-for-hamiltonian-simulation-circuits.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c1ce1ad9-d529-49a1-91df-b540603ceb88",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum_platform\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
+    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum_platform\", token=\"<YOUR-API-KEY>\", overwrite=True, set_as_default=True)\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")\n",
     "backend = service.backend(\"ibm_torino\")\n",
     "print(f\"Using backend: {backend}\")"
