--- a/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
+++ b/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
@@ -103,7 +103,7 @@
    "outputs": [],
    "source": [
     "# Credentials\n",
-    "token = \"<YOUR_IQP_API_TOKEN>\"\n",
+    "token = \"<your-API_KEY>\" # Use the 44-characters API_KEY you have created and saved from the IBM Quantum Platform Home dashboard\n",
     "hub = \"<YOUR_IQP_HUB>\"\n",
     "group = \"<YOUR_IQP_GROUP>\"\n",
     "project = \"<YOUR_IQP_PROJECT>\""
@@ -549,13 +549,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bd38bb1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Authenticate to the Qiskit Functions Catalog\n",
-    "catalog = QiskitFunctionsCatalog(token=token)\n",
+    "catalog = QiskitFunctionsCatalog(token=\"<YOUR_API_KEY>\") # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
     "\n",
     "# Load the function\n",
     "solver = catalog.load(\"q-ctrl/optimization_solver\")"
