--- a/docs/guides/initialize-account.mdx
+++ b/docs/guides/initialize-account.mdx
@@ -45,8 +45,9 @@ The basic code to connect Qiskit with your Qiskit Runtime service instance follo
 ```python
 from qiskit_ibm_runtime import QiskitRuntimeService
 
-service = QiskitRuntimeService(channel=<channel>, token=<cloud_api_key>,
-        instance=<instance_CRN>)
+service = QiskitRuntimeService(channel=<channel>,
+            token=<your-API_KEY>, # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard
+            instance=<instance_CRN>)
 ```
 
 <Admonition type="note">
@@ -61,7 +62,8 @@ The fastest way to get a `QiskitRuntimeService` instance running is the direct i
 ```python
 from qiskit_ibm_runtime import QiskitRuntimeService
 
-service = QiskitRuntimeService(token=<cloud_api_key>, instance=<instance_CRN>)
+service = QiskitRuntimeService(token=<cloud_api_key>, # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard
+            instance=<instance_CRN>)
 ```
 
 This path is reliable but can be tedious if you need to load the same details repeatedly. To avoid loading your credentials multiple times, if you are working in a trusted Python environment (such as on a personal laptop or workstation), you can use saved account credentials, as described in the following section.
@@ -119,7 +121,7 @@ service = QiskitRuntimeService(name="<name_of_saved_credentials>")
     ```
 - If you save multiple sets of credentials but don't specify one when initializing the service and there is no default saved account, the one whose name comes last alphabetically is used.
 
-    In the following example, the user saved accounts named "premium" and "open" but didn't mark either as the dfault.  They then initialized the service by using the following code. In this case, the "premium" credentials are used:
+    In the following example, the user saved accounts named "my_premium" and "my_open" but didn't mark either as the dfault.  They then initialized the service by using the following code. In this case, the "my_premium" credentials are used:
     ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
 
@@ -131,7 +133,7 @@ service = QiskitRuntimeService(name="<name_of_saved_credentials>")
 
 If you provide a token but **don't provide an instance CRN** when instantiating the service, `QiskitRuntimeService` authenticates to the account identified by the token and uses automatic instance selection to choose the most relevant instance for the requested task. If you have several instances available within your account, the service automatically chooses from the available instances, depending on the resource requested and these `QiskitRuntimeService` options (if set): `plans_preference`, `region`, `tags`.
 
-- **`plans_preference`**: The types of instance plans to prioritize. For example, if [`open`] is passed in, only Open Plan instances are available. Accepted values are `open` and `premium`. If `plans_preference` is not specified, free plans are prioritized over paid plans.
+- **`plans_preference`**: The types of instance plans to prioritize. For example, if [`open`] is passed in, only Open Plan instances are available. Accepted values are `open`, `premium`, `pay-as-you-go`, `flex`, and `on-prem`. If `plans_preference` is not specified, free plans are prioritized over paid plans.
 - **`region`**: The instance region. Accepted values are `us-east` and `eu-de`.
 - **`tags`**: The instance tags. Accepts a list of tag name strings.
 
@@ -152,25 +154,25 @@ The instance is found and used in this order:
 In this example, the service searches all instances that are available to the account to find ones that can access the specified backend:
 
 ```python
-service = QiskitRuntimeService(token=token)
+service = QiskitRuntimeService(token=<your-API_KEY>)
 ```
 
 In this example, the service searches all instances that are available to the account in the EU region to find ones that can access the specified backend:
 
 ```python
-service = QiskitRuntimeService(token=token, region="eu-de")
+service = QiskitRuntimeService(token=<your-API_KEY>, region="eu-de")
 ```
 
 In this example, the service searches all instances that are available to the account and are tagged as `services` to find ones that can access the specified backend:
 
 ```python
-service = QiskitRuntimeService(token=token, tags=['services'])
+service = QiskitRuntimeService(token=<your-API_KEY>, tags=['services'])
 ```
 
 In this example, the service searches all premium and open instances that are available to the account to find ones that can access the specified backend. If a backend is in both a Premium and an Open Plan instance, the Premium Plan instance is prioritized because `premium` is specified first in `plans_preference`.
 
 ```python
-service = QiskitRuntimeService(token=token, plans_preference=['premium', 'open'])
+service = QiskitRuntimeService(token=<your-API_KEY>, plans_preference=['premium', 'open'])
 ```
 
 #### Determine which instance was chosen
