--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -135,7 +135,9 @@
     "# https://quantum.cloud.ibm.com/docs/guides/functions\n",
     "# to authenticate with your API key.\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"INSTANCE_CRN\",\n",
+    "    token=\"YOUR_API_KEY\" # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
     ")\n",
     "\n",
     "# load \"Singularity Machine Learning - Classification\" function by Multiverse Computing\n",
@@ -652,7 +654,7 @@
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
+    "    channel=\"ibm_quantum_platform\", instance=\"INSTANCE_CRN\", token=\"YOUR_API_KEY\"\n",
     ")\n",
     "\n",
     "# load function\n",
