--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -121,7 +121,7 @@ Setup details:
 <span id="save-account"></span>**If you are working in a trusted Python environment (such as on a personal laptop or workstation),** use the `save_account()` method to save your credentials locally. ([Skip to the next step](#untrusted-machine) if you are not using a trusted environment, such as a shared or public computer, to authenticate to IBM Quantum Platform.) To use `save_account()`, run `python` in your shell, then enter the following:
 
 ```python
-token = "<your-API-token>"
+token = "<your-API_KEY>" # Use the 44-characters API_KEY you created and saved from the IBM Quantum Platform Home dashboard
 ```
 
 ```python
@@ -163,7 +163,9 @@ from qiskit_ibm_runtime import QiskitRuntimeService
 
 # After using the following code, go to the IBM Cloud API keys page (https://cloud.ibm.com/iam/apikeys)
 # and disable your API key (click Enabled slider in the API key field)
-service = QiskitRuntimeService(channel="ibm_quantum_platform", token="<MY_IBM_QUANTUM_TOKEN>", instance="<MY_INSTANCE_CRN or name>")
+service = QiskitRuntimeService(channel="ibm_quantum_platform",
+         token="<YOUR_API_KEY>", # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard
+         instance="<MY_INSTANCE_CRN or name>")
 ```
 
 <Admonition type="caution">
