--- a/docs/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
+++ b/docs/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
@@ -61,7 +61,10 @@ Use the updated code to work save accounts.
   <TabItem value="updated" label="Runtime primitives">
 For information about retrieving account credentials, see [Set up your IBM Cloud account](/docs/guides/cloud-setup).
 ```python
-QiskitRuntimeService.save_account(channel="ibm_quantum_platform", token="<API_TOKEN>", overwrite=True, set_as_default=True)
+QiskitRuntimeService.save_account(channel="ibm_quantum_platform",
+                                  token="<your-API_KEY>", # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard
+                                  overwrite=True,
+                                  set_as_default=True)
 ```
 
 Additionally, you can now name your saved credentials and load the credentials by name.
@@ -69,8 +72,14 @@ Additionally, you can now name your saved credentials and load the credentials b
 ```python
 # Save different accounts for open and premium access
 
-QiskitRuntimeService.save_account(channel="ibm_quantum_platform", token="<API_TOKEN>", instance="<CRN for premium>", name="premium")
-QiskitRuntimeService.save_account(channel="ibm_quantum_platform", token="<API_TOKEN>", instance="<CRN for open>", name="open")
+QiskitRuntimeService.save_account(channel="ibm_quantum_platform",
+                                  token="<your-API_KEY>", # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard
+                                  instance="<CRN for premium instance>",
+                                  name="premium")
+QiskitRuntimeService.save_account(channel="ibm_quantum_platform",
+                                  token="<your-API_KEY>", # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard
+                                  instance="<CRN for open instance>",
+                                  name="open")
 
 # Load the "open" credentials
 
