--- a/docs/tutorials/nishimori-phase-transition.ipynb
+++ b/docs/tutorials/nishimori-phase-transition.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "553dbafe-1778-4971-83c3-0408605b701d",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
+    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<YOUR_API_KEYN>\", overwrite=True, set_as_default=True)\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=127\n",
