--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -45,7 +45,7 @@ Qiskit Runtime v0.40.1 or later is required for the following:
     - Not passing in an instance
     - Setting a preferred instance type and region
 
-For Qiskit Runtime v0.42 or later, free plans are prioritized by default when [automatic instanc selection](/docs/guides/initialize-account#auto-select) is used.
+For Qiskit Runtime v0.42 or later, free plans are prioritized by default when [automatic instance selection](/docs/guides/initialize-account#auto-select) is used.
 </Admonition>
 
 <span id="add-instance"></span>
